Ajuste de comentários

--- a/2-limpeza/Limpeza_final.ipynb
+++ b/2-limpeza/Limpeza_final.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "ry_fL6gGDG4p"
       },
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "HIbVnmU970fZ"
       },
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "dbPrs29R3xTz"
       },
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "zf4AQ5joVp8n"
       },
@@ -121,13 +121,13 @@
       "source": [
         "Processa dados do bilibili para calcular estatísticas dos últimos 2 vídeos antes e dos primeiros 2 vídeos depois de cada recorde.\n",
         "\n",
-        "Essa decisão foi tomada pois os recordes documentados no Bilibili foram de um único streamer que dificilmente posta 2 vídeos em menos de 5 dias. Portando, foi tomada a decisão de tratar os casos dessa plataforma de forma diferente.\n",
+        "Essa decisão foi tomada pois os recordes documentados no Bilibili foram de um único streamer que dificilmente posta 2 vídeos em menos de 5 dias. Portando, foi decidido tratar os casos dessa plataforma de forma diferente.\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "bvIicRQljkga"
       },
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "3wrZd1tS5DOk"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "lEXfqavnz9dz"
       },
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "tldoD8YJeqrs"
       },
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -596,8 +596,8 @@
         "id": "-BTtqt4pdT_A"
       },
       "source": [
-        "COMENTÁRIO DA EQUIPE:\n",
-        "O scraping de speedrun.py por motivos tecnicos acabou não gerando os mesmos links utilizados no twitch_coleta_dados.py, portanto infelizmente foi necessário excluir os dados dessa plataforma."
+        "COMENTÁRIO EXTRA DA EQUIPE:\n",
+        "O scraping de speedrun.py por motivos tecnicos acabou não gerando os mesmos links utilizados no twitch_coleta_dados.py, portanto infelizmente foi necessário excluir os dados dessa plataforma. Ademais, vale ressaltar que as métricas da twitch provavelmente não seriam úteis devido ao foco da plataforma ser streaming (o horário que a pessoa realiza a stream pode ser diferente e resultar em menos ou mais views, o que seria difícil de levar em conta na análise dos dados)."
       ]
     }
   ],
